nullaway_error_C56B71A7-026D-4953-84E7-F2111FBFBB6E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ProfileCondition.java:37: error: [NullAway] enhanced-for expression attrs.get("value") is @Nullable
			for (Object value : attrs.get("value")) {
			                             ^
    (see http://t.uber.com/nullaway )
